<resources>
    <string name="app_name">Project</string>
    <string name="description">Project</string>
    <string name="Login">Авторизация</string>
    <string name="Man">Мужской</string>
    <string name="Woman">Женский</string>
    <string name="Gender">Ваш пол</string>
    <string name="YourAge">Ваш возраст</string>
    <string name="YourName2">Ваше имя</string>
    <string name="ComeIn">Войти</string>
    <string name="todo">TODO</string>
    <string name="dots"> </string>
    <string name="dots2"> </string>
    <string name="YourName">Как вас зовут?</string>
    <string name="todo1">TODO</string>
    <string name="back">фон</string>
    <string name="button">Button</string>
    <string name="todo3">TODO</string>
    <string name="textview">TextView</string>
    <string name="home"></string>
    <string name="instruction"></string>
    <string name="maskotTest"></string>
    <string name="start">Старт</string>
    <string name="testReact">Тест на реакцию</string>
    <string name="b_back">Назад</string>
    <string name="Situation">Ситуация:</string>
    <string name="Probability">Вероятность дремоты или засыпания:</string>
    <string name="zero">0</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="name">"Привет, "+name+", чем я могу тебе помочь?"</string>
</resources>