<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Test">

    <ImageView
        android:id="@+id/pos4"
        android:layout_width="57dp"
        android:layout_height="59dp"
        android:clickable="false"
        android:contentDescription="@string/todo"
        android:onClick="onClick2"
        app:layout_constraintBottom_toTopOf="@+id/pos7"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.11"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/pos1"
        app:layout_constraintVertical_bias="0.433"
        app:srcCompat="@color/trans"
        tools:ignore="ImageContrastCheck" />

    <ImageView
        android:id="@+id/pos6"
        android:layout_width="57dp"
        android:layout_height="59dp"
        android:clickable="false"
        android:contentDescription="@string/todo"
        android:onClick="onClick2"
        app:layout_constraintBottom_toTopOf="@+id/pos9"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.884"
        app:layout_constraintStart_toEndOf="@+id/pos4"
        app:layout_constraintTop_toBottomOf="@+id/pos3"
        app:layout_constraintVertical_bias="0.465"
        app:srcCompat="@color/trans"
        tools:ignore="ImageContrastCheck" />

    <ImageView
        android:id="@+id/pos5"
        android:layout_width="57dp"
        android:layout_height="59dp"
        android:clickable="false"
        android:contentDescription="@string/todo"
        android:onClick="onClick2"
        app:layout_constraintBottom_toTopOf="@+id/pos8"
        app:layout_constraintEnd_toStartOf="@+id/pos6"
        app:layout_constraintHorizontal_bias="0.458"
        app:layout_constraintStart_toEndOf="@+id/pos4"
        app:layout_constraintTop_toBottomOf="@+id/pos2"
        app:layout_constraintVertical_bias="0.433"
        app:srcCompat="@color/trans"
        tools:ignore="ImageContrastCheck" />

    <ImageView
        android:id="@+id/pos11"
        android:layout_width="57dp"
        android:layout_height="59dp"
        android:clickable="false"
        android:contentDescription="@string/todo"
        android:onClick="onClick2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.491"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.907"
        app:srcCompat="@color/trans" />

    <ImageView
        android:id="@+id/pos10"
        android:layout_width="57dp"
        android:layout_height="59dp"
        android:clickable="false"
        android:contentDescription="@string/todo"
        android:onClick="onClick2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.11"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.907"
        app:srcCompat="@color/trans" />

    <ImageView
        android:id="@+id/pos12"
        android:layout_width="57dp"
        android:layout_height="59dp"
        android:clickable="false"
        android:contentDescription="@string/todo"
        android:onClick="onClick2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.754"
        app:layout_constraintStart_toEndOf="@+id/pos11"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.907"
        app:srcCompat="@color/trans" />

    <ImageView
        android:id="@+id/pos9"
        android:layout_width="57dp"
        android:layout_height="59dp"
        android:clickable="false"
        android:contentDescription="@string/todo"
        android:onClick="onClick2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.885"
        app:layout_constraintStart_toEndOf="@+id/pos7"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.705"
        app:srcCompat="@color/trans"
        tools:ignore="ImageContrastCheck" />

    <ImageView
        android:id="@+id/pos8"
        android:layout_width="57dp"
        android:layout_height="59dp"
        android:clickable="false"
        android:contentDescription="@string/todo"
        android:onClick="onClick2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/pos9"
        app:layout_constraintHorizontal_bias="0.462"
        app:layout_constraintStart_toEndOf="@+id/pos7"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.705"
        app:srcCompat="@color/trans"
        tools:ignore="ImageContrastCheck" />

    <ImageView
        android:id="@+id/pos7"
        android:layout_width="57dp"
        android:layout_height="59dp"
        android:clickable="false"
        android:contentDescription="@string/todo"
        android:onClick="onClick2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.104"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.705"
        app:srcCompat="@color/trans"
        tools:ignore="ImageContrastCheck" />

    <ImageView
        android:id="@+id/pos3"
        android:layout_width="57dp"
        android:layout_height="59dp"
        android:clickable="false"
        android:contentDescription="@string/todo"
        android:onClick="onClick2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.885"
        app:layout_constraintStart_toEndOf="@+id/pos1"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.344"
        app:srcCompat="@color/trans"
        tools:ignore="ImageContrastCheck" />

    <ImageView
        android:id="@+id/pos1"
        android:layout_width="57dp"
        android:layout_height="59dp"
        android:baselineAlignBottom="false"
        android:clickable="false"
        android:contentDescription="@string/todo"
        android:onClick="onClick2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.104"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.355"
        app:srcCompat="@color/trans"
        tools:ignore="ImageContrastCheck" />

    <ImageView
        android:id="@+id/pos2"
        android:layout_width="57dp"
        android:layout_height="59dp"
        android:clickable="false"
        android:contentDescription="@string/todo"
        android:onClick="onClick2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/pos3"
        app:layout_constraintHorizontal_bias="0.465"
        app:layout_constraintStart_toEndOf="@+id/pos1"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.355"
        app:srcCompat="@color/trans"
        tools:ignore="ImageContrastCheck" />

    <TextView
        android:id="@+id/timer"
        android:layout_width="284dp"
        android:layout_height="71dp"
        android:text="@string/instruction"
        android:textAlignment="center"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/pos2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.005" />

    <Button
        android:id="@+id/start"
        android:layout_width="193dp"
        android:layout_height="144dp"
        android:background="#6200EA"
        android:text="@string/start"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/timer" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="99dp"
        android:layout_height="36dp"
        android:text="Счет"
        android:textAlignment="center"
        android:textSize="32sp"
        app:layout_constraintBottom_toTopOf="@+id/pos2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/timer"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/score"
        android:layout_width="161dp"
        android:layout_height="79dp"
        android:text="0"
        android:textAlignment="center"
        android:textSize="48sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView6" />

</androidx.constraintlayout.widget.ConstraintLayout>